# rockexplorer

./: Cargo.toml  Rocket.toml
css/: style.css
src/: directory_path.rs  list.rs  main.rs
templates/: base.html.tera  index.html.tera
